# LLMs-chat-backend-django

./: .gitignore  README.md  env.example  manage.py  prometheus.yml  pyproject.toml  requirements.txt
chat/: admin.py  aichat_factory.py  apps.py  google_login.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_model_is_online.py  0003_model_api_environment_variable_model_base_url.py  0004_model_is_openai.py  0005_alter_thread_model.py  0006_thread_created_at.py  0007_thread_user.py  0008_model_model_type.py  0009_remove_model_is_online_remove_model_is_openai_and_more.py  0010_modeltype_remove_model_model_type_model_type.py  0011_alter_model_type.py  0012_model_temperature.py  0013_model_identifier_alter_model_temperature.py  0014_alter_model_identifier_alter_model_name.py  0015_alter_model_identifier.py  0016_remove_model_base_url.py  0017_rename_type_model_provider.py  0018_insert_modeltypes.py
llmsbackend/: asgi.py  settings.py  urls.py  wsgi.py
ollamabackend/: asgi.py  settings.py  urls.py  wsgi.py
yamls/: docker-compose.yml  docker-prometheus.yml  grafana.yml  prometheus-config.yml
