[project]
name = "backend-django"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "attrs==25.3.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dj-rest-auth==7.0.1",
    "django==5.2",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.2",
    "google-api-python-client==2.167.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.4",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.0",
    "groq==0.23.1",
    "grpcio==1.72.0rc1",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.23",
    "langchain-anthropic==0.3.12",
    "langchain-community==0.3.21",
    "langchain-core==0.3.53",
    "langchain-deepseek==0.1.3",
    "langchain-google-genai==2.0.10",
    "langchain-groq==0.3.2",
    "langchain-huggingface==0.1.2",
    "langchain-mistralai==0.2.10",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langchain-together==0.3.0",
    "langgraph==0.3.31",
    "langgraph-checkpoint==2.0.24",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.61",
    "langsmith==0.3.31",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "mypy-extensions==1.0.0",
    "networkx==3.4.2",
    "openai==1.72.0",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psycopg2==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "pyparsing==3.2.3",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "setuptools==75.8.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "tqdm==4.67.1",
    "triton==3.2.0",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "wheel==0.45.1",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]
